--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-scripts": "4.0.3",
+    "simple-react-validator": "^1.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
